<resources>
    <string name="abbrechen">Cancel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about1">An App by Stefan Gaffga (stefan@gaffga.de)</string>
    <string name="about2">Thanks to Winfried of\nhttp://www.meditationsuhren.de\nfor providing such great Bell Sounds!</string>
    <string name="about3">If you encounter Problems, please visit the Facebook page:\n\nhttps://www.facebook.com/ZazenMeditationTimer\n</string>
    <string name="app_description">This application lets the user define a set of meditation sessions and provides a timer with visual and audible feedback when a part or the whole meditation is over.</string>
    <string name="app_name">Zazen Meditation Timer</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_error_text">Sorry, an Error occurred while saving.</string>
    <string name="backup_no_permission">Could not create backup due to missing permissions.</string>
    <string name="backup_not_createable">Error creating backup file.</string>
    <string name="backup_success_text">Backup created successfully!</string>
    <string name="bell_name_1">High Tone</string>
    <string name="bell_name_2">Low Tone</string>
    <string name="bell_name_3">Jap. Rhinbowl Dharma, 107mm</string>
    <string name="bell_name_4">Jap. Rhinbowl Dharma, 88mm (black, glazed)</string>
    <string name="bell_name_5">Jap. Rhinbowl Shomyo, 90mm</string>
    <string name="bell_name_6">Jap. Rhinbowl Tang, 164mm</string>
    <string name="bell_name_7">Tib. Bowl, 230mm</string>
    <string name="bell_name_8">Jap. Rhinbowl, 97mm</string>
    <string name="bell_pause">Bell gap (sec)</string>
    <string name="bell_user">Add Bell...</string>
    <string name="bottom_nav_about">About</string>
    <string name="bottom_nav_meditation">Meditation</string>
    <string name="bottom_nav_sessions">Sessions</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="but_pause">Pause</string>
    <string name="but_start">Start Meditation</string>
    <string name="but_stop">Stop</string>
    <string name="caption_zazen_meditation">Zazen Meditation</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkbox_keep_screen_on">Keep screen on</string>
    <string name="checkbox_no_server_messages">Show News</string>
    <string name="checkbox_phone_off">Mute Phone</string>
    <string name="checkbox_phone_off_desc">Mute all phone sounds.</string>
    <string name="copy_prefix">Copy of</string>
    <string name="crash_dialog_comment_prompt">Optional: Which action did cause the error?</string>
    <string name="crash_dialog_ok_toast">Thank you so much for your help!</string>
    <string name="crash_dialog_text">I am sorry, that an error has happened. You can help me find and fix this issue by sending this bug report and maybe even more details on what you did.</string>
    <string name="crash_dialog_title">Zazen Meditation Timer</string>
    <string name="crash_toast_text">Sorry - an internal Error has occurred!</string>
    <string name="crash_user_email_label">Optional: Your eMail-Address for questions or updates on this issue.</string>
    <string name="default_section_name">Unnamed</string>
    <string name="demo_sess1_description">Sunday evening meditation</string>
    <string name="demo_sess1_name">Zazen and Kinhin</string>
    <string name="demo_sess1_sec1_name">Preparation</string>
    <string name="demo_sess1_sec2_name">Zazen 1</string>
    <string name="demo_sess1_sec3_name">Kinhin 1</string>
    <string name="demo_sess1_sec4_name">Zazen 2</string>
    <string name="demo_sess1_sec5_name">Kinhin 3</string>
    <string name="demo_sess1_sec6_name">Zazen 3</string>
    <string name="demo_sess2_description">Daily meditation</string>
    <string name="demo_sess2_name">Zazen only</string>
    <string name="desc_get_messages">If automatic messages are disabled, you can check for news here.</string>
    <string name="desc_keep_screen_on">Keeps the screen on during the meditation</string>
    <string name="desc_no_server_messages">Automatically show News when App starts</string>
    <string name="error_checking_for_server_messages">Error fetching new messages.</string>
    <string name="gong_type">Gong Sound</string>
    <string name="help_sectionlist_text">Here you can name, describe and edit the contents of your Session.\n\n REORDERING\n To reorder the items, long press on an item and\n drag it to its new position.\n\n DELETING\n To delete an item, move it to the right.\n\n EDIT\n To edit a section, just touch it once.\n\n ADD\n To add a new section, press the + button.</string>
    <string name="help_sectionlist_title">Edit Session</string>
    <string name="label_section_name">Section name</string>
    <string name="label_session_description">Session Description</string>
    <string name="label_session_name">Session Name</string>
    <string name="menu_about">About...</string>
    <string name="menu_copy_session">Duplicate Session</string>
    <string name="menu_delete_section">Delete Section</string>
    <string name="menu_delete_session">Delete Session</string>
    <string name="menu_duplicate_section">Duplicate Section</string>
    <string name="menu_edit_session">Edit Session</string>
    <string name="menu_help">Help</string>
    <string name="menu_add_session">Add Session</string>
    <string name="menu_new_session">New Session</string>
    <string name="menu_privacy">Privacy...</string>
    <string name="menu_settings">Settings</string>
    <string name="minuten">Minutes</string>
    <string name="no_new_server_messages">No new messages available.</string>
    <string name="no_sections_in_session">Can\'t start Meditation: The selected Session does not have any Sections.</string>
    <string name="no_session_exists">There is no session that can be started. Please create one first.</string>
    <string name="notification_text">A Zazen Meditation is currently running</string>
    <string name="notification_text_paused">Zazen Meditation paused</string>
    <string name="notification_title">Zazen Meditation</string>
    <string name="notification_title_paused">Zazen Meditation (paused)</string>
    <string name="num_bells">Bell count</string>
    <string name="ok">OK</string>
    <string name="output_channels_alarm">Alarm</string>
    <string name="output_channels_alarm_desc">The gong sounds do not disturb music being played, but the gong sounds will not be played to earphones. If Alarm is muted, it will be unmuted temporarily for bell sounds.</string>
    <string name="output_channels_music">Music</string>
    <string name="output_channels_music_desc">The gong sounds can be heard through earphones, but the changing volume will interfere with music being played. If Music is muted, it will be unmuted temporarily for bell sounds.</string>
    <string name="pref_desc_brightness">Brightness of the Display during Meditation</string>
    <string name="pref_desc_volume_bells">This is the maximum volume used for playing the Bell Sounds</string>
    <string name="pref_get_messages">Check for new Messages now</string>
    <string name="pref_mute_alarm">Mute Alarm</string>
    <string name="pref_mute_alarm_desc">Do not play alarms</string>
    <string name="pref_mute_channels">Other Audio sources</string>
    <string name="pref_mute_channels_desc">Settings for other things that make sound</string>
    <string name="pref_mute_mode">Ring tone and Notifications</string>
    <string name="pref_mute_mode_none">Silence</string>
    <string name="pref_mute_mode_none_desc">No ring tone and no vibration for phone calls and Notifications</string>
    <string name="pref_mute_mode_pref">Settings regarding Ring tone and Notifications</string>
    <string name="pref_mute_mode_vibrate">Only Vibration</string>
    <string name="pref_mute_mode_vibrate_desc">Only vibrate for phone calls and Notifications (Does not work on Android 7 (Nougat) - behaves like the Silence setting)</string>
    <string name="pref_mute_mode_vibrate_sound">Ring tone and Vibration</string>
    <string name="pref_mute_mode_vibrate_sound_desc">Play Ring tone and Vibration</string>
    <string name="pref_mute_music">Mute Music</string>
    <string name="pref_mute_music_desc">Do not play music</string>
    <string name="pref_muting">Mute Settings</string>
    <string name="pref_muting_desc">Settings to prevent disturbance during Meditations</string>
    <string name="pref_output_channel">Bell output channel</string>
    <string name="pref_output_channel_desc">Select the audio output channel to use for playing the Bells.</string>
    <string name="pref_sum_backup">Save a backup of your Sessions and Sounds to your SD-Card.</string>
    <string name="pref_sum_bad_removal">SD Card was removed without being unmounted first.</string>
    <string name="pref_sum_checking">SD-Card is being checked at the moment</string>
    <string name="pref_sum_ejecting">SD-Card is being ejected</string>
    <string name="pref_sum_nofs">No Filesystem on SD-Card</string>
    <string name="pref_sum_read_only">SD-Card is read-only</string>
    <string name="pref_sum_removed">No SD-Card present</string>
    <string name="pref_title_backup">Create Backup</string>
    <string name="pref_title_brightness">Brightness</string>
    <string name="pref_title_restore">Restore from Backup</string>
    <string name="pref_title_volume_bells">Maximum Bell Volume</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Choose light or dark appearance of the App</string>
</resources>