<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="right"
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            style="@style/zenIcon"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/caption_zazen_meditation"/>
        <TextView
            android:gravity="center_horizontal"
            android:autoLink="email"
            android:linksClickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/about1"/>
        <TextView
            android:gravity="center_horizontal"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/about2"/>
        <TextView
            android:gravity="center_horizontal"
            android:autoLink="web"
            android:linksClickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/about3"/>
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/but_about_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@android:string/ok"/>
    </LinearLayout>
</ScrollView>
